--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ html{
   );
   filter: brightness(1.2);
 }
+body{
+  overflow-x: hidden;
+}
 
 .btn {
   background: linear-gradient(
@@ -67,10 +70,10 @@ html{
     @apply rounded-full font-primary text-white font-medium;
   }
   .btn-sm {
-    @apply h-[48px] px-6 text-sm;
+    @apply h-[48px] lg:h-[58px] px-6 text-xs lg:text-base;
   }
   .btn-lg {
-    @apply h-[56px] px-10 text-base;
+    @apply h-[56px] lg:h-[70px] px-10 text-sm lg:text-lg;
   }
   .btn-link {
     @apply text-base;
@@ -113,9 +116,9 @@ html{
 
 .skills .main-container .container{
   position: relative;
-  max-width: 500px;
+  max-width: 80px;
   width: 100%;
-  margin: 0 15px;
+  margin: 0 10px;
   padding: 10px 20px;
   border-radius: 7px;
 }
@@ -124,12 +127,15 @@ html{
   text-align: center;
   background-color: #01636e;
   color: #fff;
-  font-weight: 400;
+  font-weight: 500;
   border-radius: 50px;
   margin-top: 25px;
   margin-bottom: 8px;
   padding-left: 10px;
   padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  font-size: 25px;
 }
 
 .main-container .container .skill-box {
@@ -163,64 +169,8 @@ html{
   opacity: 0;
 }
 
-.skill-per.css {
-  width: 80%;
-  animation-delay: 0.4s;
-}
-
-.skill-per.javascript{
-  width: 60%;
-  animation-delay: 0.5s;
-}
-.skill-per.nodejs{
-  width: 40%;
-  animation-delay: 0.6s;
-}
-.skill-per.reactjs{
-  width: 70%;
-  animation-delay: 0.7s;
-}
-.skill-per.expressjs{
-  width: 75%;
-  animation-delay: 0.8s;
-}
 
 
-@keyframes progress {
-  0% {
-      width: 0;
-      opacity: 1;
-  }
-
-  100% {
-      opacity: 1;
-  }
-}
-
-.skill-per .tooltip{
-  position: absolute;
-  right: -14px;
-  top: -28px;
-  font-size: 9px;
-  font-weight: 500;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 3px;
-  background: rgb(220, 20, 220);
-  z-index: 1;
-}
-
-.tooltip::before {
-  content: '';
-  position: absolute;
-  left: 50%;
-  bottom: -2px;
-  height: 10px;
-  width: 10px;
-  z-index: -1;
-  background-color: rgb(234, 138, 218);
-  transform: translateX(-50%) rotate(45deg);
-}
 
 /* Home Page wave animation */
 
